--- a/Silicon Hertz Tool.csproj
+++ b/Silicon Hertz Tool.csproj
@@ -61,6 +61,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="windows7_activation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="windows7_activation.Designer.cs">
+      <DependentUpon>windows7_activation.cs</DependentUpon>
+    </Compile>
     <Compile Include="win_act.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,6 +89,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="windows7_activation.resx">
+      <DependentUpon>windows7_activation.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="win_act.resx">
       <DependentUpon>win_act.cs</DependentUpon>
     </EmbeddedResource>
