--- a/Silicon Hertz Tool.csproj
+++ b/Silicon Hertz Tool.csproj
@@ -61,11 +61,23 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="win8_acti.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="win8_acti.Designer.cs">
+      <DependentUpon>win8_acti.cs</DependentUpon>
+    </Compile>
     <Compile Include="windows7_activation.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="windows7_activation.Designer.cs">
       <DependentUpon>windows7_activation.cs</DependentUpon>
+    </Compile>
+    <Compile Include="windows81_activation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="windows81_activation.Designer.cs">
+      <DependentUpon>windows81_activation.cs</DependentUpon>
     </Compile>
     <Compile Include="win_act.cs">
       <SubType>Form</SubType>
@@ -89,8 +101,14 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="win8_acti.resx">
+      <DependentUpon>win8_acti.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="windows7_activation.resx">
       <DependentUpon>windows7_activation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="windows81_activation.resx">
+      <DependentUpon>windows81_activation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="win_act.resx">
       <DependentUpon>win_act.cs</DependentUpon>
